tests/resources/valid/definition/nested_function.mamba
class A
    def b: B

class B
    def my_c(self) -> C => C()

class C
    def fin my_field: Int := 10

def a := A()
print a.b.my_c().my_field
