tests/resources/invalid/type/definition/assign_to_function_call.mamba
class A
    def c: C

class C
    def fin my_field: Int := 10
    def my_field_accessor(self) -> Int => self.my_field

def a := A()
a.c.my_field_accessor() := 20
